--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Welcome!</title>
-</head>
-<body>
-    hola amigo
-</body>
-</html>
+{% extends "master.html" %}
+
+{% block title %}Home{% endblock %}
+
+{% block body %}Welcome home!{% endblock %}
