Set up master template with bootstrap theme

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,4 +2,4 @@
 
 {% block title %}Home{% endblock %}
 
-{% block body %}Welcome home!{% endblock %}
+<!-- {% block h1 %}Welcome home!{% endblock %} -->
