--- a/templates/weatherdata.html
+++ b/templates/weatherdata.html
@@ -16,7 +16,9 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
   <!-- Custom styles for this template-->
+  <link href="../static/custom.css" rel="stylesheet">
   <link href="../static/bootstrap-sb-admin-2/css/sb-admin-2.min.css" rel="stylesheet">
+
 
 </head>
 
@@ -241,23 +243,26 @@
                 <!-- Card Body -->
                 <div class="card-body">
                     <div id="title">
-                        <div id="currently">
+                        <div id="currently" style="text-align: center;">
                             <div id="icon">
 
                             </div>
                             <div id="description">
-                                <div id="summary-title">
-
+                                <div id="summary-title" class="h3 mb-0 font-weight-bold text-gray-900">
+                                    Temperature, Condition
                                 </div>
-                                <div id="feels-like">
-
+                                <div style="display: inline-block;">
+                                    <div class="feels-like">
+                                        <h6>Feels Like:</h6>
+                                    </div>
+                                    <div class="feels-like">
+                                        <h6>Low:</h6>
+                                    </div>
+                                    <div class="feels-like">
+                                        <h6>High:</h6>
+                                    </div>
                                 </div>
-                                <div id="feels-like">
-
-                                </div>
-                                <div id="feels-like">
-
-                                </div>
+                                
                             </div>
                         </div>
                         
@@ -273,51 +278,8 @@
             <!-- Content Column -->
             <div class="col-lg-6 mb-4">
 
-              <!-- Project Card Example -->
-              <div class="card shadow mb-4">
-                <div class="card-header py-3">
-                  <h6 class="m-0 font-weight-bold text-primary">Projects</h6>
-                </div>
-                <div class="card-body">
-                  <h4 class="small font-weight-bold">Server Migration <span class="float-right">20%</span></h4>
-                  <div class="progress mb-4">
-                    <div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <h4 class="small font-weight-bold">Sales Tracking <span class="float-right">40%</span></h4>
-                  <div class="progress mb-4">
-                    <div class="progress-bar bg-warning" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <h4 class="small font-weight-bold">Customer Database <span class="float-right">60%</span></h4>
-                  <div class="progress mb-4">
-                    <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <h4 class="small font-weight-bold">Payout Details <span class="float-right">80%</span></h4>
-                  <div class="progress mb-4">
-                    <div class="progress-bar bg-info" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <h4 class="small font-weight-bold">Account Setup <span class="float-right">Complete!</span></h4>
-                  <div class="progress">
-                    <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                </div>
-              </div>
-
 
             <div class="col-lg-6 mb-4">
-
-              <!-- Illustrations -->
-              <div class="card shadow mb-4">
-                <div class="card-header py-3">
-                  <h6 class="m-0 font-weight-bold text-primary">Illustrations</h6>
-                </div>
-                <div class="card-body">
-                  <div class="text-center">
-                    <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 25rem;" src="static/bootstrap-sb-admin-2/img/undraw_posting_photo.svg" alt="">
-                  </div>
-                  <p>Add some quality, svg illustrations to your project courtesy of <a target="_blank" rel="nofollow" href="https://undraw.co/">unDraw</a>, a constantly updated collection of beautiful svg images that you can use completely free and without attribution!</p>
-                  <a target="_blank" rel="nofollow" href="https://undraw.co/">Browse Illustrations on unDraw &rarr;</a>
-                </div>
-              </div>
 
             </div>
           </div>
@@ -332,7 +294,7 @@
       <footer class="sticky-footer bg-white">
         <div class="container my-auto">
           <div class="copyright text-center my-auto">
-            <span>Copyright &copy; Your Website 2019</span>
+            <span>DY 2020</span>
           </div>
         </div>
       </footer>
