--- a/templates/master.html
+++ b/templates/master.html
@@ -25,9 +25,9 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">Home</a>
-        <form id="searchForm" class="nav-item ">
+        <form id="searchForm" class="nav-item" method="POST" >
           <a class="currentLocBttn"></a>
-          <input type="text" class = "input">
+          <input type="text" name="city-name">
           <a id="searchButton"></a>
         </form>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
