Add user input functionality

--- a/templates/weatherdata.html
+++ b/templates/weatherdata.html
@@ -21,11 +21,11 @@
   
   <!-- Custom scripts -->
   <script type="text/javascript" src="../static/js/custom.js"></script>
-
+  <!-- {{ city }} -->
 
 </head>
 
-<body id="page-top" onload="loadData('Irvine');">
+<body id="page-top" onload="loadData(city);">
 
   <!-- Page Wrapper -->
   <div id="wrapper">
