Date and location render server-side

--- a/templates/weatherdata.html
+++ b/templates/weatherdata.html
@@ -21,8 +21,6 @@
   
   <!-- Custom scripts -->
   <script type="text/javascript" src="../static/js/custom.js"></script>
-  <!-- {{ city }} -->
-
 </head>
 
 <body id="page-top" onload="loadData(city);">
@@ -196,7 +194,7 @@
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <!-- <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">Pending Requests</div> -->
-                      <div class="h3 mb-0 font-weight-bold text-gray-800"> {{ curr_date }} </div>
+                      <div id="curr-time" class="h3 mb-0 font-weight-bold text-gray-800">{{ curr_date }}</div>
                     </div>
                     <div class="col-auto">
                       <i class="fas fa-comments fa-2x text-gray-300"></i>
