--- a/templates/master.html
+++ b/templates/master.html
@@ -54,7 +54,7 @@
     <header class="masthead">
       <div class="container d-flex h-100 align-items-center">
         <div class="mx-auto text-center">
-          <h1 class="mx-auto my-0 text-uppercase">SF Weather</h1>
+          <h1 class="mx-auto my-0 text-uppercase">{{ wdata }}</h1>
           <h2 class="text-white-50 mx-auto mt-2 mb-5">The weather, at your fingertips.</h2>
           <a href="weatherdata" class="btn btn-primary js-scroll-trigger">Take a look</a>
         </div>
