More data button updated for mobile screens

--- a/templates/master.html
+++ b/templates/master.html
@@ -30,12 +30,19 @@
           <input type="text" name="city-name">
           <a id="searchButton"></a>
         </form>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          Menu
+        <!-- <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          Take a Look
           <i class="fas fa-bars"></i>
-        </button>
+        </button> -->
+        <a class="navbar-toggler navbar-toggler-right" type="button" href="weatherdata" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          Take a Look
+          <i class="fas fa-bars"></i>
+        </a>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="weatherdata">Take a Look</a>
+            </li> 
             <!-- <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
@@ -54,9 +61,9 @@
     <header class="masthead">
       <div class="container d-flex h-100 align-items-center">
         <div class="mx-auto text-center">
-          <h1 class="mx-auto my-0 text-uppercase">{{ wdata }}</h1>
-          <h2 class="text-white-50 mx-auto mt-2 mb-5">The weather, at your fingertips.</h2>
-          <a href="weatherdata" class="btn btn-primary js-scroll-trigger">Take a look</a>
+          <h1 class="mx-auto my-0 text-uppercase">{{ temperature }}</h1>
+          <h2 class="text-white-50 mx-auto mt-2 mb-5">{{ summary }}</h2>
+          <!-- <a href="weatherdata" class="btn btn-primary js-scroll-trigger">Take a look</a> -->
         </div>
       </div>
     </header>
