Add update 'useful information' taken from API

--- a/templates/weatherdata.html
+++ b/templates/weatherdata.html
@@ -32,11 +32,11 @@
     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
       <!-- Sidebar - Brand -->
-      <a class="sidebar-brand d-flex align-items-center justify-content-center" href="weatherdata">
-        <div class="sidebar-brand-icon rotate-n-15">
-          <i class="fas fa-laugh-wink"></i>
+      <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/">
+        <div class="sidebar-brand-icon">
+          <i class="fas fa-poo-storm"></i>
         </div>
-        <div class="sidebar-brand-text mx-3">SF Weather</div>
+        <div class="sidebar-brand-text mx-3">WTHR</div>
       </a>
 
       <!-- Divider -->
