Create tests folder and start pagination

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "master.html" %}
 
-{% block title %}Home{% endblock %}
+{% block title %}WTHR{% endblock %}
 
 <!-- {% block h1 %}Welcome home!{% endblock %} -->
