--- a/templates/master.html
+++ b/templates/master.html
@@ -27,7 +27,7 @@
         <a class="navbar-brand js-scroll-trigger" href="#page-top">Home</a>
         <form id="searchForm" class="nav-item" method="POST" >
           <a class="currentLocBttn"></a>
-          <input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" type="text" name="city-name" placeholder="How's the weather in...">
+          <input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" type="text" name="city-name" placeholder="How's the weather in..." style="color:#E0E0E0; background: #E0E0E0; ">
           <a id="searchButton"></a>
         </form>
         <!-- <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,7 +61,7 @@
     <header class="masthead">
       <div class="container d-flex h-100 align-items-center">
         <div class="mx-auto text-center">
-          <h1 class="mx-auto my-0 text-uppercase">{{ temperature }}</h1>
+          <h1 class="mx-auto my-0 text-uppercase" id="temperature">{{ temperature }}</h1>
           <h2 class="text-white-50 mx-auto mt-2 mb-5">{{ summary }}</h2>
           <div>
             <div class="daily-weather-container">
