--- a/templates/weatherdata.html
+++ b/templates/weatherdata.html
@@ -21,9 +21,12 @@
   
   <!-- Custom scripts -->
   <script type="text/javascript" src="../static/js/custom.js"></script>
+  <script>
+    w_data = {{ weather_data | tojson }};
+  </script>
 </head>
 
-<body id="page-top" onload="loadData(city);">
+<body id="page-top">
 
   <!-- Page Wrapper -->
   <div id="wrapper">
@@ -46,7 +49,7 @@
       <li class="nav-item active">
         <a class="nav-link" href="weatherdata">
           <i class="fas fa-fw fa-tachometer-alt"></i>
-          <span>Dashboard</span></a>
+          <span>Daily Weather</span></a>
       </li>
 
       <!-- Divider -->
@@ -146,21 +149,22 @@
 
           <!-- Page Heading -->
           <div class="d-sm-flex align-items-center justify-content-between mb-4">
-            <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
+            <h1 class="h3 mb-0 text-gray-800">Daily Weather for {{ city }}</h1>
             <!-- <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-download fa-sm text-white-50"></i> Generate Report</a> -->
           </div>
 
           <!-- Content Row -->
-          <div class="row">
+          <div class="row" id="card-row">
 
             <!-- Location -->
-            <div class="col-xl-4 col-md-6 mb-4">
+            <div class="col-xl-4 col-md-6 mb-4" id="card">
               <div class="card border-left-primary shadow h-100 py-2">
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
+                    <div class="col mb-4">
                       <!-- <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Earnings (Monthly)</div> -->
-                      <div id="city-name" class="h3 mb-0 font-weight-bold text-gray-900">{{ city }}</div>
+                      <div id="city-name" class="h3 mb-0 font-weight-bold text-gray-900"></div>
+                      <div></div>
                     </div>
                     <div class="col-auto">
                       <i class="fas fa-calendar fa-2x text-gray-300"></i>
@@ -171,12 +175,12 @@
             </div>
 
             <!-- not sure what to put here yet -->
-            <div class="col-xl-4 col-md-6 mb-4">
+            <!-- <div class="col-xl-4 col-md-6 mb-4">
               <div class="card border-left-success shadow h-100 py-2">
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
-                      <!-- <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Earnings (Annual)</div> -->
+                      <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Earnings (Annual)</div>
                       <div class="h5 mb-0 font-weight-bold text-gray-800"></div>
                     </div>
                     <div class="col-auto">
@@ -185,15 +189,15 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
 
             <!-- Time and Date -->
-            <div class="col-xl-4 col-md-6 mb-4">
+            <!-- <div class="col-xl-4 col-md-6 mb-4">
               <div class="card border-left-warning shadow h-100 py-2">
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
-                      <!-- <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">Pending Requests</div> -->
+                      <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">Pending Requests</div>
                       <div id="curr-time" class="h3 mb-0 font-weight-bold text-gray-800">{{ curr_date }}</div>
                     </div>
                     <div class="col-auto">
@@ -202,8 +206,8 @@
                   </div>
                 </div>
               </div>
-            </div>
-          </div>
+            </div>-->
+          </div> 
 
           <!-- Content Row -->
 
@@ -261,12 +265,8 @@
           <div class="row">
 
             <!-- Content Column -->
-            <div class="col-lg-6 mb-4">
+            <div id="paginate-links"> {{ pagination.links }} </div>
 
-
-            <div class="col-lg-6 mb-4">
-
-            </div>
           </div>
 
         </div>
@@ -296,25 +296,6 @@
     <i class="fas fa-angle-up"></i>
   </a>
 
-  <!-- Logout Modal-->
-  <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-          <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">×</span>
-          </button>
-        </div>
-        <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-        <div class="modal-footer">
-          <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-          <a class="btn btn-primary" href="login.html">Logout</a>
-        </div>
-      </div>
-    </div>
-  </div>
-
   <!-- Bootstrap core JavaScript-->
   <script src="../static/bootstrap-sb-admin-2/vendor/jquery/jquery.min.js"></script>
   <script src="../static/bootstrap-sb-admin-2/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -331,7 +312,7 @@
   <!-- Page level custom scripts -->
   <script src="../static/bootstrap-sb-admin-2/js/demo/chart-area-demo.js"></script>
   <script src="../static/bootstrap-sb-admin-2/js/demo/chart-pie-demo.js"></script>
-
+  <script>loadData(w_data);</script>
 </body>
 
 </html>
