Fix card order to start from current day

--- a/templates/weatherdata.html
+++ b/templates/weatherdata.html
@@ -272,8 +272,8 @@
                     <div class="col mb-4">
                       <!-- <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Earnings (Monthly)</div> -->
                       <div id="date-name" class="h3 mb-0 font-weight-bold text-gray-900"> {{ card }} </div>
-                      <div> {{ high[loop.index] }}</div>
-                      <div> {{ low[loop.index] }}</div>
+                      <div> High: {{ high[loop.index] }}°</div>
+                      <div> Low: {{ low[loop.index] }}°</div>
                       <div> {{ summary[loop.index] }}</div>
                     </div>
                     <div class="col-auto">
