--- a/templates/master.html
+++ b/templates/master.html
@@ -27,7 +27,7 @@
         <a class="navbar-brand js-scroll-trigger" href="#page-top">Home</a>
         <form id="searchForm" class="nav-item" method="POST" >
           <a class="currentLocBttn"></a>
-          <input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" type="text" name="city-name" placeholder="How's the weather in..." style="color:#E0E0E0; background: #E0E0E0; ">
+          <input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" type="text" name="city-name" placeholder="How's the weather in..." style="color:background: #E0E0E0; ">
           <a id="searchButton"></a>
         </form>
         <!-- <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
