--- a/test/reports/CHROME_79.0.3945.130_Windows_main.xml
+++ b/test/reports/CHROME_79.0.3945.130_Windows_main.xml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <testsuites errors="0"
             failures="0"
-            tests="2">
+            tests="3">
 
   <testsuite name="main"
     errors="0" failures="0" hostname="" id="" package="main" skipped="0"
-    tests="2" time="7.391" timestamp="">
+    tests="3" time="15.56" timestamp="">
   
-    <testcase name="Title Test" classname="main" time="1.192" assertions="2">
+    <testcase name="Title Test" classname="main" time="1.172" assertions="2">
 
     
 
     
     </testcase>
   
-    <testcase name="Temperature Test" classname="main" time="6.199" assertions="2">
+    <testcase name="Page1 Search Test" classname="main" time="7.311" assertions="1">
 
     
+    </testcase>
+  
+    <testcase name="Page2 Search Test" classname="main" time="7.080" assertions="1">
 
     
     </testcase>
