Fix redirect bug

--- a/templates/weatherdata.html
+++ b/templates/weatherdata.html
@@ -84,7 +84,7 @@
 
           <!-- Page Heading -->
           <div class="d-sm-flex align-items-center justify-content-between mb-4">
-            <h1 class="h3 mb-0 text-gray-800">Weekly Report - {{ city }}</h1>
+            <h1 id="weekly-report" class="h3 mb-0 text-gray-800">Weekly Report - {{ city }}</h1>
             <!-- <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-download fa-sm text-white-50"></i> Generate Report</a> -->
           </div>
 
@@ -193,7 +193,7 @@
                         </div>
                       </div>
               
-                      <img style="width:25rem; margin-top: -7rem;" src="../static/img/undraw_weather_app.svg" alt="">
+                      <img style="width:25rem; margin-top: -6rem;" src="../static/img/undraw_weather_app.svg" alt="">
                       <div class="info-container">
                         <br>
                         <div class="feels-like">
