--- a/templates/master.html
+++ b/templates/master.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">Home</a>
-        <form id="searchForm" class="nav-item" method="POST" >
+        <form action="{{ url_for('weatherdata') }}" id="searchForm" class="nav-item" method="POST" >
           <a class="currentLocBttn"></a>
           <input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" type="text" name="city-name" placeholder="How's the weather in..." style="color:background: #E0E0E0; ">
           <a id="searchButton"></a>
